--- a/mingw-w64-wxWidgets-git/PKGBUILD
+++ b/mingw-w64-wxWidgets-git/PKGBUILD
@@ -26,7 +26,7 @@ pkgname=(
   $([[ "$_build_gtk3" == "yes" ]] && echo "${MINGW_PACKAGE_PREFIX}-wxgtk${_wx_basever}-gtk3${_namesuffix}")
   $([[ "$_build_qt" == "yes" ]] && echo "${MINGW_PACKAGE_PREFIX}-wxqt${_wx_basever}${_namesuffix}")
 )
-pkgver=3.1.4.0.r67788.c4.gfce84f7bd0
+pkgver=3.1.4.0.r67861.c6.g335565076e
 pkgrel=1
 pkgdesc="A C++ library that lets developers create applications for Windows, Linux and UNIX (mingw-w64)"
 arch=('any')
@@ -45,22 +45,30 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-libtiff"
 )
 checkdepends=()
+#options=('strip' 'staticlibs' 'buildflags' '!debug')
 options=('!strip' 'staticlibs' 'buildflags' 'debug')
 source=(
   ${_sourcedir}::"git+https://github.com/wxWidgets/wxWidgets.git#branch=master"
 
   001-wxWidgets-3.0.2-relocate-prefix-in-bin-wx-config.patch
-  005-wxWidgets-3.1.3-Remove-WX_LIBS_STATIC-from-m4.patch
+
   021-wxWidgets-3.1.2-Disable-wxUSE_GRAPHICS_DIRECT2D.patch
   022-wxWidgets-3.1.3-Add-wxHAS_XLOCALE_SUPPORT-to-mingw64.patch
   023-wxWidgets-3.1.2-setup-wxUSE_GRAPHICS_DIRECT2D.patch
+  024-wxWidgets-3.0.4-Add-wxHAVE_DPI_INDEPENDENT_PIXELS-guard.patch
+
+  # Patches rejected by wxWidgets team
+  031-wxWidgets-3.0.4-Add-deprecated-wxWidgets-1.xx-compatibility-message.patch
+  005-wxWidgets-3.1.3-Remove-WX_LIBS_STATIC-from-m4.patch
 )
 sha256sums=('SKIP'
             'ca0c2ddbf34654589c79dc859adf8fd9bf20388789bb098c7456cfe81b3ea805'
-            '4a4828f0c9cdc638cffde6a30b5dfb14283719acc9e89e19de8ec2d5a80a5aec'
             '99fb6781e9d0fcb3dc910a53245596c5b677c9df00214ff76ffece6bbc8779d9'
             '94be2da4172c93331707979713d980f7f649dcf14add3d40b34e116549a23003'
-            '132a58955e8ed566b8d169a8ce97d6c361b0591f26c22a1a6d8307d22eafe999')
+            '132a58955e8ed566b8d169a8ce97d6c361b0591f26c22a1a6d8307d22eafe999'
+            'c5ee3627b19530bf2509d6fc1fa2c6741ac9b7e121d55a29339d5c5dfbb67ccb'
+            '07c269b3b6ca863b03eed1f1115012005adf468dd3fcef3a3a8764a00d689da9'
+            '4a4828f0c9cdc638cffde6a30b5dfb14283719acc9e89e19de8ec2d5a80a5aec')
 
 if [[ "$_enable_webview" == "yes" ]] ; then
     _webview_option=--enable-webview
@@ -107,8 +115,13 @@ prepare() {
   ${GIT_AM} ${srcdir}/023-wxWidgets-3.1.2-setup-wxUSE_GRAPHICS_DIRECT2D.patch
   # ${srcdir}/${_sourcedir}/build/update-setup-h
 
+  # Patch needs testing in building wxGTK/Win32
+  ${GIT_AM} ${srcdir}/024-wxWidgets-3.0.4-Add-wxHAVE_DPI_INDEPENDENT_PIXELS-guard.patch
+
   # MinGW64 GCC stdlib is missing library functions 2019-11-26
   #${GIT_AM} ${srcdir}/022-wxWidgets-3.1.3-Add-wxHAS_XLOCALE_SUPPORT-to-mingw64.patch
+
+  ${GIT_AM} ${srcdir}/031-wxWidgets-3.0.4-Add-deprecated-wxWidgets-1.xx-compatibility-message.patch
 }
 
 build() {
@@ -165,6 +178,7 @@ if check_option "debug" "y"; then
     _debug_options+=("--enable-debug=max")
 else
     _debug_options+=("--enable-optimise")
+    _debug_options+=("--enable-debug=yes")
 fi
 
 echo "_debug_options := ${_debug_options[@]}"
@@ -408,6 +422,7 @@ fi
 _check() {
 if [[ "$1" == "${srcdir}/build-msw-${CARCH}" ]] ; then
 
+  cd "${srcdir}"/build-msw-${CARCH}/demos     && make -k --jobs=1 || true
   cd "${srcdir}"/build-msw-${CARCH}/samples   && make -k --jobs=1 || true
   cd "${srcdir}"/build-msw-${CARCH}/tests     && make -k --jobs=1 || true
 
@@ -458,7 +473,7 @@ _package_wxmsw() {
   mv ${pkgdir}${MINGW_PREFIX}/lib/*.dll ${pkgdir}${MINGW_PREFIX}/bin
 
   # Rename files
-  mv ${pkgdir}${MINGW_PREFIX}/bin/wx-config{,-${_wx_basever}}
+  mv ${pkgdir}${MINGW_PREFIX}/bin/wx-config{,-${_wx_basever}
   mv ${pkgdir}${MINGW_PREFIX}/share/aclocal/wxwin.m4 ${pkgdir}${MINGW_PREFIX}/share/aclocal/wxwin${_wx_basever}.m4
 
   # Add missing exe file extension (Likely bug in wxWidgets makefile)
@@ -524,7 +539,7 @@ _package_wxgtk3() {
   mv ${pkgdir}${MINGW_PREFIX}/lib/*.dll ${pkgdir}${MINGW_PREFIX}/bin
 
   # Rename files
-  mv ${pkgdir}${MINGW_PREFIX}/bin/wx-config{,-${_wx_basever}}
+  mv ${pkgdir}${MINGW_PREFIX}/bin/wx-config{,-${_wx_basever}
   mv ${pkgdir}${MINGW_PREFIX}/share/aclocal/wxwin.m4 ${pkgdir}${MINGW_PREFIX}/share/aclocal/wxwin${_wx_basever}.m4
 
   # Add missing exe file extension (Likely bug in wxWidgets makefile)
@@ -587,7 +602,7 @@ _package_wxqt() {
   mv ${pkgdir}${MINGW_PREFIX}/lib/*.dll ${pkgdir}${MINGW_PREFIX}/bin
 
   # Rename files
-  mv ${pkgdir}${MINGW_PREFIX}/bin/wx-config{,-${_wx_basever}}
+  mv ${pkgdir}${MINGW_PREFIX}/bin/wx-config{,-${_wx_basever}
   mv ${pkgdir}${MINGW_PREFIX}/share/aclocal/wxwin.m4 ${pkgdir}${MINGW_PREFIX}/share/aclocal/wxwin${_wx_basever}.m4
 
   # Add missing exe file extension (Likely bug in wxWidgets makefile)
