--- a/mingw-w64-wxWidgets3.0-git/PKGBUILD
+++ b/mingw-w64-wxWidgets3.0-git/PKGBUILD
@@ -158,6 +158,7 @@ if check_option "debug" "y"; then
     _debug_options+=("--enable-debug=max")
 else
     _debug_options+=("--enable-optimise")
+    _debug_options+=("--enable-debug=yes")
 fi
 
 echo "_debug_options := ${_debug_options[@]}"
